Deployments/services/invoice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labtest-ingress
  labels:
    name: labtest-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: "/api/invoices"
        pathType: Prefix
        backend:
          service:
            name: invoiceservice-clusterip
            port:
              number: 80
